# Exploratory-Data-Analysis-App

./: .gitignore  .pre-commit-config.yaml  Plan: Modernização do Exploratory Dat.prompt.md  Procfile  README.md  Visão geral.prompt.md  eda_main.py  pyproject.toml  requirements.txt  setup.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml
pages/: 1_📊_Overview.py  2_📈_Univariate.py  3_📉_Multivariate.py  4_Profiling.py  4_📋_Profiling.py
src/eda_app/: __init__.py  app.py
src/eda_app/components/: __init__.py  download.py
src/eda_app/data/: __init__.py  preprocessing.py
src/eda_app/pages/: 1_Overview.py  2_Univariate.py  3_Multivariate.py
src/eda_app/stats/: __init__.py  profiling.py
src/eda_app/visualization/: __init__.py
tests/: test_loader.py  test_preprocessing.py  test_profiling.py  test_stats.py  test_visualization.py
